# dotfile-manager

./: .gitignore  README.md  registry.toml
dotfile-manager/: .env.example  pyproject.toml
dotfile-manager/src/dotfile_manager/: __init__.py  cli.py  errors.py  local_paths.py  tool_config.py
dotfile-manager/src/dotfile_manager/diff/: __init__.py  _engine.py
dotfile-manager/src/dotfile_manager/ops/: __init__.py  _partial.py
dotfile-manager/src/dotfile_manager/registry/: __init__.py  model.py
dotfile-manager/src/dotfile_manager/tui/: __init__.py  _panels.py
dotfile-manager/tests/: conftest.py  test_diff.py  test_integration.py  test_local_paths.py  test_ops.py  test_partial.py  test_registry.py
dotfile-manager/tests/fixtures/local/ghostty/: config
dotfile-manager/tests/fixtures/local/nvim/: init.lua
dotfile-manager/tests/fixtures/local/nvim/lua/: plugins.lua
dotfile-manager/tests/fixtures/local/zsh/: .zshrc
dotfile-manager/tests/fixtures/source/: registry.toml
dotfile-manager/tests/fixtures/source/ghostty/: config
dotfile-manager/tests/fixtures/source/nvim/: init.lua
dotfile-manager/tests/fixtures/source/nvim/lua/: plugins.lua
dotfile-manager/tests/fixtures/source/zsh/: .zshrc
nvim/: init.lua  lazy-lock.json
nvim/lua/config/: keymaps.lua  options.lua
nvim/lua/plugins/: harpoon2.lua  python.lua  snackpicker.lua
starship/: starship.toml
